# lem_in

./: CMakeLists.txt  Makefile  README.md  my_room  small_room  text.txt
Result/: 1.map  10_lots_of_comments.map  2.map  20.map  5.map  9_path_depth_10_ants.map  9_path_depth_2_ants.map  9_path_depth_4_ants.map  9_path_depth_8_ants.map  9_path_depth_9_ants.map  err_3_coordinates.map  err_duplicate.map  err_letter_in_coordinate.map  err_link_to_unknown_room.map  err_no_end.map  err_no_end2.map  err_no_links.map  err_no_start.map  err_no_start2.map  err_start_end_same.map  err_too_many_ants.map
inc/: backup.h  lem-inc.h  lemin.h
src/: ft_ants.c  ft_debug.c  ft_find_path.c  ft_get_maze.c  ft_get_maze_part_1.c  ft_get_maze_part_2.c  ft_init_path.c  ft_maze_checks.c  ft_maze_checks_2.c  ft_part_1_helpers.c  ft_path_checks_2.c  ft_paths_actions.c  ft_paths_checks.c  ft_room_actions.c  ft_room_checks.c  ft_set_depth.c  main.c
